# dvr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  llms.txt  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli.md  cookbook.md  daemon.md  getting-started.md  index.md  library.md  mcp.md  parity.md  spec.md
docs/api/: index.md
docs/assets/: site.webmanifest
docs/concepts/: errors.md  idempotency.md  inspect.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
dvr/: __init__.py  __main__.py  _wrap.py  audio.py  color.py  connection.py  daemon.py  diff.py  doctor.py  errors.py  gallery.py  interchange.py  lint.py  media.py  project.py  render.py  resolve.py  schema.py  snapshot.py  spec.py  timeline.py  vcr.py
dvr/cli/: __init__.py  main.py  output.py  plugins.py  session.py
dvr/cli/commands/: apply.py  clip.py  completion.py  diff.py  lint.py  mcp.py  media.py  project.py  render.py  schema.py  script.py  serve.py  snapshot.py  spec.py  timeline.py
dvr/mcp/: __init__.py  server.py
dvr/mcp/assets/: __init__.py
scripts/: check_parity.py
tests/: conftest.py  test_aces_and_imf.py  test_api_additions.py  test_cli_commands.py  test_clip_where.py  test_connection_localhost_fallback.py  test_connection_no_remote_discovery.py  test_daemon_cli.py  test_delete_timelines_fusionscript_handle.py  test_diff.py  test_doctor.py  test_errors.py  test_fusion_wrappers.py  test_imports.py  test_lint.py  test_mcp_agents.py  test_mcp_feedback_fixes.py  test_mcp_server.py  test_media_helpers.py  test_output.py  test_parity.py  test_schema.py  test_settings_typed.py  test_snapshot.py  test_spec_transactions.py  test_text_customization.py  test_timeline_primitives.py  test_v05_primitives.py  test_v112_primitives.py  test_v11_primitives.py  test_vcr.py  test_wrappers_with_mock.py
