[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "dvr"
dynamic = ["version"]
description = "The missing CLI and Python library for DaVinci Resolve. Declarative, scriptable, LLM-friendly."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "M Hadi", email = "mhadifilms@gmail.com" }]
keywords = [
    "davinci-resolve",
    "video-editing",
    "post-production",
    "vfx",
    "color-grading",
    "fcpxml",
    "edl",
    "cli",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/mhadifilms/dvr"
Documentation = "https://mhadifilms.github.io/dvr"
Repository = "https://github.com/mhadifilms/dvr"
Issues = "https://github.com/mhadifilms/dvr/issues"
Changelog = "https://github.com/mhadifilms/dvr/blob/main/CHANGELOG.md"

[project.scripts]
dvr = "dvr.cli.main:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "dvr/_version.py"

[tool.hatch.build.targets.sdist]
include = ["dvr", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["dvr"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dvr/_version.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line too long (formatter handles)
    "B008",          # function calls in defaults (typer pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["DaVinciResolveScript", "fusionscript", "mcp", "mcp.*"]
ignore_missing_imports = true

# The Resolve scripting handles are inherently `Any`; wrapper modules
# necessarily return values forwarded from those handles. Don't warn on
# `Any` returns in those modules — the boundary is the whole point.
[[tool.mypy.overrides]]
module = [
    "dvr.audio",
    "dvr.color",
    "dvr.connection",
    "dvr.daemon",
    "dvr.gallery",
    "dvr.interchange",
    "dvr.media",
    "dvr.project",
    "dvr.render",
    "dvr.resolve",
    "dvr.timeline",
]
warn_return_any = false

# MCP server uses untyped third-party decorators; allow them.
[[tool.mypy.overrides]]
module = ["dvr.mcp.*"]
disallow_untyped_decorators = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: requires a running DaVinci Resolve instance",
    "macos: macOS-only behavior",
]
